[package]
name = "guessing_game_fork"
version = "0.1.2"
authors = ["Dan Dwyer <dandwyer@gmail.com>"]
edition = "2018"
description = "Finished version of Guessing Game"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rand="0.3.0"
